src/app/modules/blog/view.component.scss
.m-ionic-blog{

  .m-ionic-blog--banner{
    z-index: -1;
    display: block;
  }

  h1{
    padding: 16px;
    letter-spacing: 2px;
    font-weight: 600;
    margin: 0;
  }

  .m-ionic-blog--owner-block{
    padding:0 12px;

    img{
      max-width:24px;
      min-width:24px;
      max-height:24px;
      min-height:24px;
    }
    .m-ionic-body{
      font-size:12px;
      padding:0;
      flex:0;
    }
    .m-ionic-blog--buttons {
      flex: 1;
      display: flex;
      align-items: center;
      padding-left:16px;

      .m-ionic-blog--buttons > * {
        flex: 1;
        text-align: center;
        color: #666;
      }
    }
  }

  .m-ionic-blog--body{
    padding: 16px;
    font-size: 16px;
    letter-spacing: 1px;
    line-height: 22px;
  }
}

